2003-12-16  Martin Baulig  <martin@ximian.com>

	* Makefile.am: In a Makefile.am, comments are started with `#' and
	not with `dnl' - I must have been an idiot ...

2003-12-10  Todd Berman <tberman@gentoo.org>

	* configure.in: adding libicu url to the ICU: no message.

2003-12-05  John Luke  <jluke@cfl.rr.com>

	* data/config.in: new dll mapping entry for libgstreamer
	
2003-12-02  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* README: tiny fix ;-)

2003-11-26  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add -fno-strict-aliasing to CFLAGS.
	
	* configure.in: Applied patch from recht@netbsd.org. Avoid linking in
	librt if not neccesary.

2003-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix signbit check. Fixes #51315.

2003-11-20  Jackson Harper <jackson@ximian.com>

	* data/machine.config: Add OutputCacheModule
	
2003-11-19  Jackson Harper <jackson@ximian.com>

	* doc/web/team.xml: New email address and job description
	* doc/web/team/jackson.png: Picture of me debugging...seems appropriate
	
2003-11-14  Jackson Harper <jackson@ximian.com>

	* Makefile.am: delete mscorlib.dll
	
2003-11-12 Jackson Harper <jackson@ximian.com>

	* Makefile.am: corlib is now named mscorlib.dll
	
2003-11-12  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in acconfig.h: Add check for signbit, which is missing in
	FreeBSD 4.x.

2003-11-07  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Remove debugging junk accidently checked in.
	
	* configure.in: Add new --with-nptl option to enable NPTL only
	features since auto-detection is not reliable.

	* autogen.sh: Fix previous patch and silence noisy GNU which.	

2003-11-07  Bernie Solomon  <bernard@ugsolutions.com>

	* autogen.sh: tweak glibtool check so it works
	if which doesn't set return code properly

2003-11-07  Zoltan Varga  <vargaz@freemail.hu>

	* autogen.sh: Silence noisy GNU which.
	
	* autogen.sh: Applied patch from Peter Teichman (peter@ximian.com). 
	Use 'glibtool' instead of 'libtool' on OSX. 
