@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: Mono Interpreter
+Description: Mono Interpreter Runtime
+Version: @VERSION@
+Requires: glib-2.0 gmodule-2.0 gthread-2.0
+Libs: -L${libdir} -lmint @libmono_ldflags@ @ICU_LIBS@ -lm
+Cflags: -I${includedir} @libmono_cflags@
